Fix spacing in footer

--- a/apps/frontend/src/components/Footer.module.scss
+++ b/apps/frontend/src/components/Footer.module.scss
@@ -1,7 +1,7 @@
 .footer {
 	border-top: 2px solid;
 	border-color: var(--color-border);
-	padding: 1em;
+	//padding: 1em;
 	background-color: var(--color-background-secondary);
 
 	display: flex;
@@ -22,6 +22,7 @@
 	justify-content: center;
 	width: 100%;
 	height: fit-content;
+	margin-bottom: calc(var(--spacing) * -1);
 }
 
 .bottom {
@@ -35,7 +36,6 @@
 	width: 50%;
 	flex-direction: column;
 	align-items: center;
-	margin-bottom: 15px;
 }
 
 .right {
@@ -43,7 +43,6 @@
 	width: 50%;
 	flex-direction: column;
 	align-items: center;
-	margin-bottom: 15px;
 }
 
 .textBlock {
